2008-04-29  Simon Hausmann  <hausmann@webkit.org>

        Rubber-stamped by Holger.

        Updated the layout tests after the latest submits to the Qt port
        to our new baseline, after numerous fixes in RenderThemeQt
        and assorted.

        Updated the Skipped file with new expected failures that need
        fixing.

        * platform/qt/Skipped:
        * platform/qt/css1/box_properties/acid_test-expected.txt:
        * platform/qt/css1/font_properties/font_family-expected.txt:
        * platform/qt/css2.1/t09-c5526c-display-00-e-expected.txt:
        * platform/qt/css2.1/t1503-c522-font-family-00-b-expected.txt:
        * platform/qt/editing/deleting/5168598-expected.txt:
        * platform/qt/editing/execCommand/4920488-expected.txt:
        * platform/qt/editing/execCommand/insertImage-expected.txt:
        * platform/qt/editing/inserting/4960120-1-expected.txt:
        * platform/qt/editing/inserting/before-after-input-element-expected.txt:
        * platform/qt/editing/pasteboard/4641033-expected.txt:
        * platform/qt/editing/pasteboard/4806874-expected.txt:
        * platform/qt/editing/pasteboard/4944770-1-expected.txt:
        * platform/qt/editing/pasteboard/nested-blocks-with-text-area-expected.txt:
        * platform/qt/editing/pasteboard/nested-blocks-with-text-field-expected.txt:
        * platform/qt/editing/pasteboard/pasting-tabs-expected.txt:
        * platform/qt/editing/selection/3690703-2-expected.txt:
        * platform/qt/editing/selection/3690703-expected.txt:
        * platform/qt/editing/selection/3690719-expected.txt:
        * platform/qt/editing/selection/4397952-expected.txt:
        * platform/qt/editing/selection/4895428-3-expected.txt:
        * platform/qt/editing/selection/5136696-expected.txt:
        * platform/qt/editing/selection/5213963-expected.txt:
        * platform/qt/editing/selection/5240265-expected.txt:
        * platform/qt/editing/selection/caret-before-select-expected.txt: