@@ -3,16 +3,16 @@ layer at (0,0) size 800x600
 layer at (0,0) size 800x322
   RenderBlock {HTML} at (0,0) size 800x322
     RenderBody {BODY} at (8,16) size 784x290
-      RenderBlock {P} at (0,0) size 784x18 [color=#FF0000]
+      RenderBlock {P} at (0,0) size 784x18 [color=#008000]
         RenderText {#text} at (0,0) size 132x18
           text run at (0,0) width 132: "This should be green"
-      RenderBlock {P} at (0,34) size 784x18 [color=#FF0000]
+      RenderBlock {P} at (0,34) size 784x18 [color=#008000]
         RenderText {#text} at (0,0) size 132x18
           text run at (0,0) width 132: "This should be green"
-      RenderBlock {P} at (0,68) size 784x18 [color=#FF0000]
+      RenderBlock {P} at (0,68) size 784x18 [color=#008000]
         RenderText {#text} at (0,0) size 132x18
           text run at (0,0) width 132: "This should be green"
-      RenderBlock {P} at (0,102) size 784x18 [color=#FF0000]
+      RenderBlock {P} at (0,102) size 784x18 [color=#008000]
         RenderText {#text} at (0,0) size 132x18
           text run at (0,0) width 132: "This should be green"
       RenderBlock {P} at (0,136) size 784x18 [color=#008000]
